# alpha-g

./: CONTRIBUTING.md  Cargo.toml  README.md  bors.toml
.github/workflows/: lint.yml  rust.yml
analysis/: CHANGELOG.md  Cargo.toml  README.md
analysis/src/: lib.rs
detector/: CHANGELOG.md  Cargo.toml  README.md
detector/examples/: README.md  bv_adc.rs  tpc_adc.rs  tpc_pads.rs  trg.rs
detector/src/: alpha16.rs  chronobox.rs  lib.rs  midas.rs  padwing.rs  trigger.rs
detector/src/alpha16/: aw_map.rs  tests.rs
detector/src/alpha16/aw_map/: tests.rs
detector/src/chronobox/: tests.rs
detector/src/midas/: tests.rs
detector/src/padwing/: map.rs  tests.rs
detector/src/padwing/map/: tests.rs
detector/src/trigger/: tests.rs
physics/: CHANGELOG.md  Cargo.toml  README.md
physics/data/calibration/pads/baseline/: 11192_complete.ron  9277_complete_handwritten_cherry_picked_see_commit.ron  simulation_complete.ron
physics/data/calibration/pads/gain/: 11186_complete.ron  9277_complete.ron  simulation_complete.ron
physics/data/calibration/wires/baseline/: 7026_complete.json  simulation_complete.json
physics/data/calibration/wires/gain/: 11186_complete.json  9277_complete.json  simulation_complete.json
physics/data/optimization/anode_analysis/: largest_svd.json
physics/data/optimization/pad_analysis/: largest_svd.json
physics/data/simulation/drift_table/: drift_1T_70Ar_30CO2.json
physics/data/simulation/tpc_response/: pads.json  wires.json
physics/examples/: README.md  vertices.rs
physics/src/: anode_analysis.rs  calibration.rs  chronobox.rs  common.rs  deconvolution.rs  drift.rs  lib.rs  matching.rs  pad_analysis.rs  reconstruction.rs  tests.rs
physics/src/calibration/: pads.rs  wires.rs
physics/src/calibration/pads/: baseline.rs  delay.rs  gain.rs
physics/src/calibration/pads/baseline/: tests.rs
physics/src/calibration/pads/delay/: tests.rs
physics/src/calibration/pads/gain/: tests.rs
physics/src/calibration/wires/: baseline.rs  delay.rs  gain.rs
physics/src/calibration/wires/baseline/: tests.rs
physics/src/calibration/wires/delay/: tests.rs
physics/src/calibration/wires/gain/: tests.rs
physics/src/deconvolution/: pads.rs  wires.rs
physics/src/deconvolution/pads/: tests.rs
physics/src/deconvolution/wires/: tests.rs
physics/src/drift/: tests.rs
physics/src/matching/: tests.rs
physics/src/reconstruction/: tests.rs  track_finding.rs  track_fitting.rs  vertex_fitting.rs
postana/: Cargo.toml  README.md
