[package]
name = "alpha-g-analysis"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Executables that perform common post-processing/offline analysis on the data of the ALPHA-g experiment"
readme = "README.md"
repository = "https://github.com/ALPHA-g-Experiment/alpha-g"
keywords = ["alpha", "alpha-g", "cern", "physics", "antimatter"]
categories = ["science", "command-line-utilities"]

[dependencies]
alpha_g_detector = { version = "0.3.0",  path = "../detector" }
alpha_g_physics = { version = "0.1.0", path = "../physics" }
anyhow = "1.0.68"
argmin = { version = "0.8.1", default-features = false }
clap = { version = "4.0.9", features = ["derive"] }
csv = "1.3.0"
cursive = "0.20.0"
glob = "0.3.0"
indicatif = { version = "0.17.7", features = ["rayon"] }
lz4 = "1.24.0"
memmap2 = "0.5.7"
midasio = { version = "0.5.2", features = ["rayon"] }
opener = "0.5.0"
pgfplots = "0.5.1"
rayon = "1.8.0"
ron = "0.8.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.95"
statrs = "0.16.0"
tempfile = "3.3.0"
thiserror = "1.0.53"
uom = "0.35.0"
