[package]
name = "alpha-g-analysis"
version = "0.5.3"
edition = "2021"
license = "MIT"
description = "Analysis binaries for the ALPHA-g experiment"
readme = "README.md"
repository = "https://github.com/ALPHA-g-Experiment/alpha-g"
keywords = ["alpha", "alpha-g", "cern", "physics", "antimatter"]
categories = ["science", "command-line-utilities"]

[dependencies]
alpha_g_detector = { version = "=0.5.0",  path = "../detector" }
alpha_g_physics = { version = "=0.1.2", path = "../physics" }
anyhow = "1.0.68"
clap = { version = "4.0.9", features = ["derive"] }
csv = "1.3.0"
indicatif = { version = "0.17.7", features = ["rayon"] }
lz4 = "1.24.0"
midasio = { version = "0.5.2", features = ["rayon"] }
rayon = "1.8.0"
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.53"
uom = "0.35.0"
