[package]
name = "alpha_g_detector"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "A Rust library to handle the raw output of the ALPHA-g detectors"
readme = "README.md"
repository = "https://github.com/ALPHA-g-Experiment/alpha-g"
keywords = ["alpha", "alpha-g", "cern", "physics", "antimatter"]
categories = ["science"]
documentation = "https://docs.rs/alpha_g_detector"

[dependencies]
crc32c = "0.6.4"
lazy_static = "1.4.0"
serde = { version = "1.0.195", features = ["derive"] }
thiserror = "1.0.56"
winnow = "0.6.1"

[dev-dependencies]
midasio = "0.5.0"
ron = "0.8.0"

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}"},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...alpha_g_detector-v{{version}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}"},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n\n## [Unreleased] - ReleaseDate", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/ALPHA-g-Experiment/alpha-g/compare/alpha_g_detector-v{{version}}...HEAD", exactly=1},
]
