[package]
name = "alpha_g_physics"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Data analysis library for the ALPHA-g experiment"
readme = "README.md"
repository = "https://github.com/ALPHA-g-Experiment/alpha-g"
keywords = ["alpha", "alpha-g", "cern", "physics", "antimatter"]
categories = ["science"]
documentation = "https://docs.rs/alpha_g_physics"

[dependencies]
alpha_g_detector = { version = "0.3.0", path = "../detector" }
argmin = { version = "0.8.1", default-features = false }
argmin-math = "0.3.0"
dyn-stack = "0.9.0"
faer-cholesky = "0.9.1"
faer-core = "0.9.1"
itertools = "0.11.0"
lazy_static = "1.4.0"
num-complex = "0.4.4"
ron = "0.8.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.95"
statrs = "0.16.0"
thiserror = "1.0.40"
uom = { version = "0.35.0", features = ["use_serde"] }

[dev-dependencies]
