[package]
name = "postana"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3", features = ["derive"] }
cursive = "0.18"
detector = { path = "../detector" }
glob = "0.3"
indicatif = "0.16"
lz4 = "1"
memmap2 = "0.5"
midasio = "0.4"
opener = "0.5"
pgfplots = "0.4"
serde_json = "1"
tempfile = "3"
