[package]
name = "alpha-g-postana"
version = "0.1.0"
edition = "2021"

[dependencies]
alpha_g_detector = { path = "../detector" }
clap = { version = "3", features = ["derive"] }
cursive = "0.18"
glob = "0.3"
indicatif = "0.16"
lz4 = "1"
memmap2 = "0.5"
midasio = "0.4"
opener = "0.5"
pgfplots = "0.4"
serde_json = "1"
tempfile = "3"
thiserror = "1.0"
